style: fix project tags spacing

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -1671,6 +1671,10 @@ h4 {
   gap: 2rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
